# h523ce-tinyusb

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  main.c  syscalls.c
app/: CMakeLists.txt  tusb_config.h  update.c  update.h  usb_descriptors.c
drivers/: adc.h  clk.h  gpio.h  watchdog.h
drivers_h5/: CMakeLists.txt  adc.c  clk.c  gpio.c  stm32h5xx_hal_conf.h  usb.c  watchdog.c
lib/: CMakeLists.txt
